--- a/Cinema/appsettings.json
+++ b/Cinema/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectioString": "Data Source=.;Initial Catalog=CinemaApp;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
